fixed the scrollbar issues

--- a/teenlogin.css
+++ b/teenlogin.css
@@ -1,10 +1,4 @@
-*{
-	box-shadow: border-box;
-	padding: 0;
-}
-
 .light{
-	margin: 5px;
 	background-color: #F5FFFA;
 	font-family: sans-serif;
 }
@@ -13,44 +7,12 @@
 
 /********** Navigation Menu*************************
 ****************************************************/
-nav{
-	display: flex;
-	align-items: center;
-	background-color: #696969;
-	color: #ffffff;
-	justify-content: space-around;
-	height: 8vh;
 
-}
-
-nav p{
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	width: 30%;
-}
-
-.image{
-	width: 30px;
-	height: 30px;
-}
-
-.navlinks{
-	list-style: none;
-	margin-left: auto;
-	color: #ffffff;
-	display: flex;
-	justify-content: space-around;
-	width: 40%;
-
-}
-
-.navlinks a{
+.navlinks li a{
 	text-decoration: none;
 	color: #ffffff;
 }
-.navlinks a:hover{
-	font-size: 20px;
+.navlinks li a:hover{
 	color: #000080;
 }
 
@@ -87,23 +49,7 @@ nav p{
 /*******************main body***************************
 *******************************************************/
 
-.main{
-	width: 50%;
-	margin: auto;
-	margin-bottom: 40px;
-	padding: 10px;
-	padding-bottom: 40px;
-	border: solid #F5F5F5;
-	border-radius: 3%;
-	text-align: center;
-	box-shadow: 1px 5px 5px rgba(0,0,030, .3)
-}
-
 .main div{
-	margin: auto;
-	width: auto;
-	display: block;
-	justify-content: space-between;
 	border: solid #F5F5F5;
 	border-radius: 3%;
 	box-shadow: 1px 5px 5px rgba(0,0,030, .3)
@@ -199,13 +145,6 @@ nav .burger{
 	width: auto;
 }
 
-.main div{
-	margin: 0;
-	width: auto;
-	display: block;
-	align-items: center;
-	justify-content: space-between;
-}
 
 .main div .input{
 	width: 50vw;
